Closed
Bug 908813
Opened 11 years ago
Closed 11 years ago
OdinMonkey: Differential Testing: Different error message involving --ion-eager
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: gkw, Assigned: luke)
References
Details
(Keywords: testcase)
Attachments
(1 file)
987 bytes,
patch
|
bbouvier
:
review+
|
Details | Diff | Splinter Review |
try {
(function() {
e(function() {
{
"use asm"
}
})
})()
} catch (e) {}
shows the following on a 32-bit debug deterministic threadsafe js shell on m-c rev fb2318875cd4 with --ion-eager:
1comparejit.js:5:16 warning: "use asm" is only meaningful in the Directive Prologue of a function body:
1comparejit.js:5:16 warning: "use asm"
1comparejit.js:5:16 warning: ................^
1comparejit.js:5:16 warning: "use asm" is only meaningful in the Directive Prologue of a function body:
1comparejit.js:5:16 warning: "use asm"
1comparejit.js:5:16 warning: ................^
but shows the following without any CLI arguments:
1comparejit.js:5:16 warning: "use asm" is only meaningful in the Directive Prologue of a function body:
1comparejit.js:5:16 warning: "use asm"
1comparejit.js:5:16 warning: ................^
(Pass in the testcase as a CLI argument to reproduce)
There is an extra copy of the warning. Is this intended?
Flags: needinfo?(luke)
Assignee | ||
Comment 1•11 years ago
|
||
Oh, haha, we report the warning once during the syntax-only parse and again during the full parse. Probably doesn't matter, but trivial to fix.
Assignee: general → luke
Status: NEW → ASSIGNED
Attachment #794820 -
Flags: review?(bbouvier)
Flags: needinfo?(luke)
Comment 2•11 years ago
|
||
Comment on attachment 794820 [details] [diff] [review]
fix-warning
Review of attachment 794820 [details] [diff] [review]:
-----------------------------------------------------------------
Nice catch!
Attachment #794820 -
Flags: review?(bbouvier) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in
before you can comment on or make changes to this bug.
Description
•