Bug 908813 - Only report asm.js warnings once during syntax-only parse (r=bbouvier)